--- a/v2/views/campgrounds.ejs
+++ b/v2/views/campgrounds.ejs
@@ -3,7 +3,7 @@
          <header class="jumbotron">    
             <div class="container">
               <h1>Welcome to YelpCamp</h1>
-               <p>View our hand-picked campgrounds from all over the world</p>
+               <p><h4>Our hand-picked campgrounds from all over the world</h4></p>
                <p>
                     <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add new Campground</a>
                </p> 
@@ -17,7 +17,10 @@
                      <img src="<%= campground.image %>">
                      <div class="caption">
                         <h4><%= campground.name %></h4>
-                     </div>            
+                     </div>   
+                     <div class="caption">
+                        <h6><%= campground.description %></h6>
+                     </div>         
                </div>
             </div>
             <% }); %>
